2009-05-11 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* Dns.cs: made GetHostAddresses and friends internal for 1.x
	* EndpointPermission.cs: use GetHostAddresses.

2009-05-10 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* CookieContainer.cs: matching hosts to domain names like MS does.
	Bug #421827 fixed.

2009-05-02  Atsushi Enomoto  <atsushi@ximian.com>

	* CredentialCache.cs : implement all not-implemented methods.
	  Patch by Mineda Nozomi. Close bug #499556.

2009-04-21  Sebastien Pouliot  <sebastien@ximian.com>

	* EndPoint.cs: Throw NotImplementedException instead of 
	NotSupportedException
	* IPEndPoint.cs: Fix some validations.

2009-04-21 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* WebConnection.cs:
	* HttpWebRequest.cs: provide more information on why the connection
	could not be established.

2009-04-06 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* FtpWebRequest.cs: send REST after PASV to avoid some servers
	forgetting aboout it.
	Bug #491590 fixed.

2009-03-24 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* FtpWebRequest.cs: we were sending CWD instead of PWD.
	Bug #486703 fixed.

2009-03-03 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* IPAddress.cs: don't allocate the IPv6 array for IPv4 addresses.

2009-02-23 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* WebClient.cs: append the QueryString in DownloadData.
	Fixes bug #323788.

2009-02-21 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* FtpWebResponse.cs: return a Null stream when there's no response to
	be read.
	* FtpWebRequest.cs: provide the error returned by the server in the
	exception.
	* WebClient.cs: set the correct method when doing a FTP upload.
	Fixes bug #478451.

2009-02-19 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* FtpWebRequest.cs: avoid errors when creating a temporary Uri to get
	the local path.
	* WebClient.cs: when setting up the request for downloading, use the
	default method. Fixes bug #477611.

2009-02-16  Atsushi Enomoto  <atsushi@ximian.com>
